# happyhorse-sdk

./: CHANGELOG.md  CONTRIBUTING.md  README.md
go/: README.md  go.mod
go/happyhorse/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  settings.gradle.kts
java/runapi-happyhorse/: build.gradle.kts
java/runapi-happyhorse/src/main/java/ai/runapi/happyhorse/: HappyHorseClient.java
java/runapi-happyhorse/src/main/java/ai/runapi/happyhorse/resources/: EditVideoResource.java  HappyhorseResource.java  ImageToVideoResource.java  TextToVideoResource.java
java/runapi-happyhorse/src/main/java/ai/runapi/happyhorse/types/: CompletedEditVideoResponse.java  CompletedImageToVideoResponse.java  CompletedTextToVideoResponse.java  EditVideoModel.java  EditVideoParams.java  EditVideoResponse.java  HappyhorseParamUtils.java  HappyhorseValue.java  ImageToVideoModel.java  ImageToVideoParams.java  ImageToVideoResponse.java  TextToVideoModel.java  TextToVideoParams.java  (+3 more)
java/runapi-happyhorse/src/test/java/ai/runapi/happyhorse/: HappyHorseClientTest.java  HappyHorseLiveApiSmokeTest.java  HappyHorseLocalApiSmokeTest.java
js/: README.md  package.json
js/skills/happyhorse/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: edit-video.ts  image-to-video.ts  reference-to-video.ts  text-to-video.ts
js/tests/: smoke.test.ts
js/tests/unit/: resources.test.ts
python/: README.md  pyproject.toml
python/src/runapi/happyhorse/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/happyhorse/resources/: __init__.py  edit_video.py  image_to_video.py  text_to_video.py
python/tests/: test_client.py
ruby/: README.md  runapi-happyhorse.gemspec
ruby/lib/: runapi-happyhorse.rb
ruby/lib/runapi/: happyhorse.rb
ruby/lib/runapi/happyhorse/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/happyhorse/resources/: edit_video.rb  image_to_video.rb  reference_to_video.rb  text_to_video.rb
ruby/spec/: spec_helper.rb
ruby/spec/runapi/happyhorse/: client_spec.rb
ruby/spec/runapi/happyhorse/resources/: edit_video_spec.rb  image_to_video_spec.rb  text_to_video_spec.rb
