[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-happyhorse"
version = "0.1.0"
description = "HappyHorse text-to-video, image-to-video, and edit-video client for RunAPI"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "happyhorse", "text-to-video", "image-to-video", "edit-video", "ai", "sdk"]
dependencies = ["runapi-core"]

[project.urls]
Homepage = "https://runapi.ai/models/happyhorse"
Documentation = "https://runapi.ai/docs#sdk-happyhorse"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[tool.uv.sources]
runapi-core = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "happyhorse"
